# pnger

./: .gitignore  ANALYSIS_REPORT.md  CLAUDE.md  Cargo.toml  README.md  cliff.toml
.github/workflows/: ci.yml  release-plz.yml  release.bak.yml  release.yml  security.yml
.github/workflows/common/: base.yml
docs/: anyhow.md  clap.md  png.md  thiserror.md
examples/: custom_random.rs  linear_pattern.rs  random_pattern.rs  xor_obfuscation.rs
payloads/: config.json
src/: cli.rs  error.rs  io.rs  lib.rs  main.rs  obfuscation.rs  utils.rs
src/cli/: lsb.rs  mod.rs
src/strategy/: lsb.rs  mod.rs
src/strategy/lsb/: bit_index.rs  crypto.rs  data.rs  header.rs  mod.rs  utils.rs
tests/: property_tests.rs
